src/bootstrap/test/v0_13/rejects/04_unterminated_block_macos/main.zg
# requires: v0.13
asm {
	mov x0, #0
	svc #0x80
